--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,34 @@
   font-family: 'Roboto';
   src: local('Roboto'), url(./fonts/Roboto/Roboto-Regular.ttf) format('woff2');
 }
+
+:root {
+  --color-primary1: #572ac8;
+  --color-primary2: #572ac8a1;
+  --color-secondary: #adb5b4;
+  --color-white: #f6f9fc;
+}
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: var(--color-primary1);
+  border: 1px solid var(--color-white);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary2);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: var(--color-secondary);
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: var(--color-white);
+}
