--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,23 @@
   border-radius: 8px;
   background-color: var(--color-white);
 }
+
+.slick-slide {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
+.slick-next {
+  right: 0 !important;
+}
+
+.slick-prev {
+  left: -40px !important;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  padding: 5px;
+  color: #572ac8 !important;
+}
