--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,3 +58,17 @@
   padding: 5px;
   color: #572ac8 !important;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: none;
+  transition: background-color 5000s ease-in-out 0s;
+}
